# spotify-review-sentiment

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.bat  setup.sh  spotify_sentiment_analysis.ipynb  spotify_sentiment_analysis_colab.ipynb
